Fixed nav-bar navigation on Firefox Android. Smooth scrolling still not working.

--- a/component/parallax/parallax-layer.css
+++ b/component/parallax/parallax-layer.css
@@ -1,8 +1,3 @@
 :host {
-    display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 }
